# dioxus-html-macro

./: .gitignore  Cargo.toml  README.md
examples/: homepage.rs
src/: assertions.rs  attribute.rs  attribute_ident.rs  attributes.rs  close_tag.rs  element.rs  html.rs  html_non_recursive.rs  item.rs  lib.rs  open_tag.rs  prelude.rs  rsx_expr.rs  template.rs  unopened.rs
test/: extra_close_tag.stderr  missing_close_tag.stderr  trailing_tag.stderr
test-cases/: Cargo.toml
test-cases/src/: main.rs
test/attribute/: format_str.rs  format_str.stderr  missing_equals.rs  missing_equals.stderr  non_str_custom.rs  non_str_custom.stderr  passes.rs  random_expression.rs  random_expression.stderr
test/body/: expression.rs  plain_text.rs  plain_text.stderr
test/props/: enum.rs
test/tag/: extra_close.rs  extra_close.stderr  missing_close.rs  missing_close.stderr  trailing.rs  trailing.stderr
