[package]
name = "dioxus-html-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["macro", "dioxus", "html", "rsx"]
readme = "README.md"
description = "An html macro for dioxus applications."
authors = ["Tomas Vallotton <tvallotton@uc.cl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = {version = "1.0.98", features = ["full"]}

[dev-dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
