[package]
name = "dioxus-html-macro"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["macro", "dioxus", "html", "rsx"]
readme = "README.md"
repository = "https://github.com/DioxusLabs/dioxus-html-macro"
description = "An html macro for dioxus applications."
authors = ["Tomas Vallotton <tvallotton@uc.cl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
dioxus = { version = "0.4.3", default-features = false }
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "2.0.41", features = ["full"] }

[dev-dependencies]
dioxus-desktop = "0.4.0"
dioxus = { version = "0.4.3", default-features = true }
trybuild = "1.0.63"
